adds logo and description, but still work to do

--- a/index.html
+++ b/index.html
@@ -14,6 +14,33 @@
 </head>
 <body>
   <div class='entry'>
+    <div class='cover-main'>
+      <h1>
+        Auckland's Comprehensive Artshow
+      </h1>
+    </div>
+    <div class='description'>
+      <p>
+        KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
+      </p>
+      <h3>
+        Our latest episode...
+      </h3>
+      <p>
+        The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
+      </p>
+      <button type='button'>
+        Listen here
+      </button>
+      <h3>
+        Missed an episode?
+      </h3>
+      <p>
+        If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
+      </p>
+    </div>
+  </div>
+  <div class='entry'>
     <div class='cover158'>
       <h2>
         The man who reviewed 12 movies at once
