old logo replaced with new one

--- a/index.html
+++ b/index.html
@@ -1,216 +1,214 @@
 <!DOCTYPE html>
-<html lang='en'></html>
-<head>
-  <meta charset='UTF-8'>
-  <title>KickArts | Auckland's Comprehensive ArtShow</title>
-  <link href='css/reset.css' rel='stylesheet'>
-  <link href='css/main.css' rel='stylesheet'>
-  <link href='img/favicon.png' rel='icon'>
-  <link href='img/apple-touch-icon-precomposed.png' rel='apple-touch-icon-precomposed'>
-  <script src='js/min/modernizr.js'></script>
-  <script src='js/min/jquery-1.11.3.min.js'></script>
-  <script src='js/min/skrollr.js'></script>
-  <script src='js/min/app-min.js'></script>
-</head>
-<body>
-  <h1 class='logo'>
-    <img alt='' src='img/kickarts-logo-new-icon.png'>
-    <div class='logo-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
-      <p class='subtitle'>
-        Auckland's Comprehensive ArtShow.
-      </p>
-      <p class='details'>
-        Every Sunday 8.35 | 104.6 FM
-      </p>
-    </div>
-  </h1>
-  <div class='entry'>
-    <div class='cover-main'>
-      <h1>
-        Auckland's Comprehensive Artshow
-      </h1>
-    </div>
-    <div class='description'>
-      <p>
-        KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
-      </p>
-      <h3>
-        Our latest episode...
-      </h3>
-      <p>
-        The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
-      </p>
-      <button type='button'>
-        Listen here
-      </button>
-      <h3>
-        Missed an episode?
-      </h3>
-      <p>
-        If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
-      </p>
-    </div>
-  </div>
-  <div class='entry'>
-    <div class='cover158'>
-      <h2>
-        The man who reviewed 12 movies at once
-      </h2>
-    </div>
-    <div class='description'>
-      <p>
-        What does an illiterate postal worker and addicted video gamers have in common? Only that they are the subject of discussion on another KickArts episode. Yes, Lana Walters talks about her new webseries, <a href="https://www.youtube.com/watch?v=QqB6o63er0g" target="_blank">Game Over</a>, children's author Emma Vere-Jones discusses her latest book, <a href="http://www.emmaverejones.com/books-and-stories-1-1/" target="_blank">Stan the Van Man</a> and Paul Qualtrough joins us to mini - review 12 films in thye NZIFF.
-      </p>
-    </div>
-    <div class='media'>
-      <div class='left-panel'>
-        <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
-        <p>episode #158</p>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8'>
+    <title>KickArts | Auckland's Comprehensive ArtShow</title>
+    <link href='css/reset.css' rel='stylesheet'>
+    <link href='css/main.css' rel='stylesheet'>
+    <link href='img/favicon.png' rel='icon'>
+    <link href='img/apple-touch-icon-precomposed.png' rel='apple-touch-icon-precomposed'>
+    <script src='js/min/modernizr.js'></script>
+    <script src='js/min/jquery-1.11.3.min.js'></script>
+    <script src='js/min/skrollr.js'></script>
+    <script src='js/min/app-min.js'></script>
+  </head>
+  <body>
+    <h1 class='logo'>
+      <img alt='' src='img/kickarts-logo-new-icon.png'>
+      <div class='logo-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
+        <p class='subtitle'>
+          Auckland's Comprehensive ArtShow.
+        </p>
+        <p class='details'>
+          Every Sunday 8.35 | 104.6 FM
+        </p>
       </div>
-      <div class='right-panel'>
-        <i class='icon fa fa-arrow-circle-o-down'>
-          <span class='action'>download</span>
-        </i>
-        <p class='date'>posted 26 July 2015</p>
-      </div>
-      <div class='player'>
-        <audio controls='controls'></audio>
+    </h1>
+    <div class='entry'>
+      <div class='description'>
+        <p>
+          KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
+        </p>
+        <h3>
+          Our latest episode...
+        </h3>
+        <p>
+          The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
+        </p>
+        <p>
+          <button type='button'>
+            Listen here
+          </button>
+        </p>
+        <h3>
+          Missed an episode?
+        </h3>
+        <p>
+          If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
+        </p>
       </div>
     </div>
-  </div>
-  <div class='entry'>
-    <div class='cover157'>
-      <h2>
-        Docu Fast Watch
-      </h2>
-    </div>
-    <div class='description'>
-      <p>
-        Want to see 10 great NZ docos in 40 minutes? <a href="http://loadingdocs.net" target="_blank">Loading Docs</a>, an initiative started by guest Julia Parnell, does exactly that. And filmmaker Rowena Baines, director of "Dancing in the Dark" also joins us to talk the challenges of making a 3 minute doco plus all the other great work she is doing with helping Vanuatu <a href="http://rowenabaines.com/vanuatu-music-revival-project" target="_blank">reaccess music</a>. PLUS Don Bassett discusses "Wunderrūma" at the Auckland Art Gallery and Molly reviews "Caterpillers" at the Bruce Mason.
-      </p>
-    </div>
-    <div class='media'>
-      <div class='left-panel'>
-        <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
-        <p>episode #157</p>
+    <div class='entry'>
+      <div class='cover158'>
+        <h2>
+          The man who reviewed 12 movies at once
+        </h2>
       </div>
-      <div class='right-panel'>
-        <i class='icon fa fa-arrow-circle-o-down'>
-          <span class='action'>download</span>
-        </i>
-        <p class='date'>posted 19 July 2015</p>
+      <div class='description'>
+        <p>
+          What does an illiterate postal worker and addicted video gamers have in common? Only that they are the subject of discussion on another KickArts episode. Yes, Lana Walters talks about her new webseries, <a href="https://www.youtube.com/watch?v=QqB6o63er0g" target="_blank">Game Over</a>, children's author Emma Vere-Jones discusses her latest book, <a href="http://www.emmaverejones.com/books-and-stories-1-1/" target="_blank">Stan the Van Man</a> and Paul Qualtrough joins us to mini - review 12 films in thye NZIFF.
+        </p>
       </div>
-      <div class='player'>
-        <audio controls='controls'></audio>
-      </div>
-    </div>
-  </div>
-  <div class='entry'>
-    <div class='cover156'>
-      <h2>
-        A Threesome with Emmet Skilton
-      </h2>
-    </div>
-    <div class='description'>
-      <p>
-        Climate Change! Politics! A Threesome! Yes, it's 'that kind of show" to quote special guest, Emmet Skilton (Almighty Johnsons), AND it's our THIRD BIRTHDAY SHOW. Emmet talks about his upcoming show on climate change called "Between two waves" opening in August and Enny Benzonelli cuts together a KickArts retrospective to celebrate our three years on air. And a big thanks to those that have made this happen - Paul Hooli, Paula Crimmens, Catherine George, Anna Harding, Lisa Finucane, Mary Wadsworth, Merrin H Cavel, Will Moore and Carolynn Day, Art Green, Carolyn Finucane, Susan Payne Rose, Don Bassett and the indefatigable Adam Fresco! And extra special thanks to Emma Bishop who works hard in front of and behind the scenes! Don't miss it!!
-      </p>
-    </div>
-    <div class='media'>
-      <div class='left-panel'>
-        <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
-        <p>episode #156</p>
-      </div>
-      <div class='right-panel'>
-        <i class='icon fa fa-arrow-circle-o-down'>
-          <span class='action'>download</span>
-        </i>
-        <p class='date'>posted 12 July 2015</p>
-      </div>
-      <div class='player'>
-        <audio controls='controls'></audio>
+      <div class='media'>
+        <div class='left-panel'>
+          <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
+          <p>episode #158</p>
+        </div>
+        <div class='right-panel'>
+          <i class='icon fa fa-arrow-circle-o-down'>
+            <span class='action'>download</span>
+          </i>
+          <p class='date'>posted 26 July 2015</p>
+        </div>
+        <div class='player'>
+          <audio controls='controls'></audio>
+        </div>
       </div>
     </div>
-  </div>
-  <div class='entry'>
-    <div class='cover155'>
-      <h2>
-        Cocktail a la KickArts
-      </h2>
-    </div>
-    <div class='description'>
-      <p>
-        Take 3 reviewers, add a fantastic guest, stir it with an overwhelmed host and sprinkle a 7 years old critic and you get an awesome KickArts’ cocktail. Victoria Abbott tells us all about her upcoming show "Caterpillars" on at the Bruce Mason Centre and about her daytime job as a Clown Doctor. Anna reviews "The Mourning After" and "Krisnan's Dairy", Will gets about Orang-utan and Don Bassett talks Opera, more specifically Puccini’s "Turandot". All topped off with Molly Green and her review of "Grandma McGarvey" Grandpa’s Slippers" (Pumphouse Theatre). Don’t miss this unique show and stream it now!
-      </p>
-    </div>
-    <div class='media'>
-      <div class='left-panel'>
-        <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
-        <p>episode #155</p>
+    <div class='entry'>
+      <div class='cover157'>
+        <h2>
+          Docu Fast Watch
+        </h2>
       </div>
-      <div class='right-panel'>
-        <i class='icon fa fa-arrow-circle-o-down'>
-          <span class='action'>download</span>
-        </i>
-        <p class='date'>posted 5 July 2015</p>
+      <div class='description'>
+        <p>
+          Want to see 10 great NZ docos in 40 minutes? <a href="http://loadingdocs.net" target="_blank">Loading Docs</a>, an initiative started by guest Julia Parnell, does exactly that. And filmmaker Rowena Baines, director of "Dancing in the Dark" also joins us to talk the challenges of making a 3 minute doco plus all the other great work she is doing with helping Vanuatu <a href="http://rowenabaines.com/vanuatu-music-revival-project" target="_blank">reaccess music</a>. PLUS Don Bassett discusses "Wunderrūma" at the Auckland Art Gallery and Molly reviews "Caterpillers" at the Bruce Mason.
+        </p>
       </div>
-      <div class='player'>
-        <audio controls='controls'></audio>
-      </div>
-    </div>
-  </div>
-  <div class='entry'>
-    <div class='cover154'>
-      <h2>
-        Ourangutan Edition
-      </h2>
-    </div>
-    <div class='description'>
-      <p>
-        Awesome Awesome Awesome is all we can can say about Sunday's show! Tai Royal and Helen Langford from Okareka Dance Company join us to talk about all the exciting stuff going on, Regan from Te Rehia comes into the studio to talk about "Hokia Ki Nga Maunga" and Alice Canton talks "Orangutan". PLUS dynamic duo Carolynn and Will review "Murdoch", ATC's latest offering. Plus some fantastic discourse on the state of the arts in Aotearoa NZ.
-      </p>
-    </div>
-    <div class='media'>
-      <div class='left-panel'>
-        <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
-        <p>episode #154</p>
-      </div>
-      <div class='right-panel'>
-        <i class='icon fa fa-arrow-circle-o-down'>
-          <span class='action'>download</span>
-        </i>
-        <p class='date'>posted 28 June 2015</p>
-      </div>
-      <div class='player'>
-        <audio controls='controls'></audio>
+      <div class='media'>
+        <div class='left-panel'>
+          <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
+          <p>episode #157</p>
+        </div>
+        <div class='right-panel'>
+          <i class='icon fa fa-arrow-circle-o-down'>
+            <span class='action'>download</span>
+          </i>
+          <p class='date'>posted 19 July 2015</p>
+        </div>
+        <div class='player'>
+          <audio controls='controls'></audio>
+        </div>
       </div>
     </div>
-  </div>
-  <div class='entry'>
-    <div class='cover153'>
-      <h2>
-        The KickArts After
-      </h2>
-    </div>
-    <div class='description'>
-      <p>
-        Another informative, humourous and irreverent KickArts show this week - Ahi Karunaharan and Prateek Vadgaonkar discuss the upcoming "The Mourning After" at the Basement Theatre and Julie Collis joins us as "Grandma McGarvey" from Tim Bray's latest offering at the Pumphouse. Emma reviews "BALLET REVOLUCION" and the dynamic duo, Carolyn and Will, review "Matariki Mixit" at Te Pou. All this plus some Sir Paul.
-      </p>
-    </div>
-    <div class='media'>
-      <div class='left-panel'>
-        <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
-        <p>episode #153</p>
+    <div class='entry'>
+      <div class='cover156'>
+        <h2>
+          A Threesome with Emmet Skilton
+        </h2>
       </div>
-      <div class='right-panel'>
-        <i class='icon fa fa-arrow-circle-o-down'>
-          <span class='action'>download</span>
-        </i>
-        <p class='date'>posted 21 June 2015</p>
+      <div class='description'>
+        <p>
+          Climate Change! Politics! A Threesome! Yes, it's 'that kind of show" to quote special guest, Emmet Skilton (Almighty Johnsons), AND it's our THIRD BIRTHDAY SHOW. Emmet talks about his upcoming show on climate change called "Between two waves" opening in August and Enny Benzonelli cuts together a KickArts retrospective to celebrate our three years on air. And a big thanks to those that have made this happen - Paul Hooli, Paula Crimmens, Catherine George, Anna Harding, Lisa Finucane, Mary Wadsworth, Merrin H Cavel, Will Moore and Carolynn Day, Art Green, Carolyn Finucane, Susan Payne Rose, Don Bassett and the indefatigable Adam Fresco! And extra special thanks to Emma Bishop who works hard in front of and behind the scenes! Don't miss it!!
+        </p>
       </div>
-      <div class='player'>
-        <audio controls='controls'></audio>
+      <div class='media'>
+        <div class='left-panel'>
+          <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
+          <p>episode #156</p>
+        </div>
+        <div class='right-panel'>
+          <i class='icon fa fa-arrow-circle-o-down'>
+            <span class='action'>download</span>
+          </i>
+          <p class='date'>posted 12 July 2015</p>
+        </div>
+        <div class='player'>
+          <audio controls='controls'></audio>
+        </div>
       </div>
     </div>
-  </div>
-</body>
+    <div class='entry'>
+      <div class='cover155'>
+        <h2>
+          Cocktail a la KickArts
+        </h2>
+      </div>
+      <div class='description'>
+        <p>
+          Take 3 reviewers, add a fantastic guest, stir it with an overwhelmed host and sprinkle a 7 years old critic and you get an awesome KickArts’ cocktail. Victoria Abbott tells us all about her upcoming show "Caterpillars" on at the Bruce Mason Centre and about her daytime job as a Clown Doctor. Anna reviews "The Mourning After" and "Krisnan's Dairy", Will gets about Orang-utan and Don Bassett talks Opera, more specifically Puccini’s "Turandot". All topped off with Molly Green and her review of "Grandma McGarvey" Grandpa’s Slippers" (Pumphouse Theatre). Don’t miss this unique show and stream it now!
+        </p>
+      </div>
+      <div class='media'>
+        <div class='left-panel'>
+          <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
+          <p>episode #155</p>
+        </div>
+        <div class='right-panel'>
+          <i class='icon fa fa-arrow-circle-o-down'>
+            <span class='action'>download</span>
+          </i>
+          <p class='date'>posted 5 July 2015</p>
+        </div>
+        <div class='player'>
+          <audio controls='controls'></audio>
+        </div>
+      </div>
+    </div>
+    <div class='entry'>
+      <div class='cover154'>
+        <h2>
+          Ourangutan Edition
+        </h2>
+      </div>
+      <div class='description'>
+        <p>
+          Awesome Awesome Awesome is all we can can say about Sunday's show! Tai Royal and Helen Langford from Okareka Dance Company join us to talk about all the exciting stuff going on, Regan from Te Rehia comes into the studio to talk about "Hokia Ki Nga Maunga" and Alice Canton talks "Orangutan". PLUS dynamic duo Carolynn and Will review "Murdoch", ATC's latest offering. Plus some fantastic discourse on the state of the arts in Aotearoa NZ.
+        </p>
+      </div>
+      <div class='media'>
+        <div class='left-panel'>
+          <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
+          <p>episode #154</p>
+        </div>
+        <div class='right-panel'>
+          <i class='icon fa fa-arrow-circle-o-down'>
+            <span class='action'>download</span>
+          </i>
+          <p class='date'>posted 28 June 2015</p>
+        </div>
+        <div class='player'>
+          <audio controls='controls'></audio>
+        </div>
+      </div>
+    </div>
+    <div class='entry'>
+      <div class='cover153'>
+        <h2>
+          The KickArts After
+        </h2>
+      </div>
+      <div class='description'>
+        <p>
+          Another informative, humourous and irreverent KickArts show this week - Ahi Karunaharan and Prateek Vadgaonkar discuss the upcoming "The Mourning After" at the Basement Theatre and Julie Collis joins us as "Grandma McGarvey" from Tim Bray's latest offering at the Pumphouse. Emma reviews "BALLET REVOLUCION" and the dynamic duo, Carolyn and Will, review "Matariki Mixit" at Te Pou. All this plus some Sir Paul.
+        </p>
+      </div>
+      <div class='media'>
+        <div class='left-panel'>
+          <i class='icon-4x fa fa-play-circle-o fa-4x'></i>
+          <p>episode #153</p>
+        </div>
+        <div class='right-panel'>
+          <i class='icon fa fa-arrow-circle-o-down'>
+            <span class='action'>download</span>
+          </i>
+          <p class='date'>posted 21 June 2015</p>
+        </div>
+        <div class='player'>
+          <audio controls='controls'></audio>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
