--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
     <script src='js/min/app-min.js'></script>
   </head>
   <body>
-    <h1 class='logo'>
-      <img alt='' src='img/kickarts-logo-new-icon.png'>
-      <div class='logo-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
-        <p class='subtitle'>
-          Auckland's Comprehensive ArtShow.
-        </p>
-        <p class='details'>
-          Every Sunday 8.35 | 104.6 FM
-        </p>
-      </div>
-    </h1>
+    <header>
+      <h1 class='logo'>
+        <img alt='' src='img/kickarts-logo-new-icon.png'>
+        <div class='logo-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
+          <p class='subtitle'>
+            Auckland's Comprehensive ArtShow.
+          </p>
+          <p class='details'>
+            Every Sunday 8.35 | 104.6 FM
+          </p>
+        </div>
+      </h1>
+    </header>
     <div class='entry'>
       <div class='description'>
         <p>
