adds some description text unformatted

--- a/index.html
+++ b/index.html
@@ -25,6 +25,21 @@
           </p>
         </div>
       </h1>
+      <div class='header-box'>
+        <p>
+          KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
+        </p>
+      </div>
+      <div class='header-box'>
+        <p>
+          The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
+        </p>
+      </div>
+      <div class='header-box'>
+        <p>
+          If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
+        </p>
+      </div>
     </header>
     <div class='entry'>
       <div class='description'>
