adds header boxes, jeet and js for same column height

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href='img/apple-touch-icon-precomposed.png' rel='apple-touch-icon-precomposed'>
     <script src='js/min/modernizr.js'></script>
     <script src='js/min/jquery-1.11.3.min.js'></script>
+    <script src='js/min/match-height.js' type='text/javascript'></script>
     <script src='js/min/skrollr.js'></script>
     <script src='js/min/app-min.js'></script>
   </head>
@@ -26,45 +27,56 @@
         </div>
       </h1>
       <div class='header-box'>
-        <p>
-          KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
-        </p>
-      </div>
-      <div class='header-box'>
-        <p>
-          The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
-        </p>
-      </div>
-      <div class='header-box'>
-        <p>
-          If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
-        </p>
+        <div class='header-box-col'>
+          <div class='card-title emerald'>
+            <h3>
+              Live Shows
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-bolt'></div>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on <a href="http://www.planetaudio.org.nz/languages">planetaudio.org.nz</a>.</p>
+          </div>
+          <div class='card-action'>
+            <a href='http://www.planetaudio.org.nz/ab/index.php' target='_blank'>Listen here</a>
+          </div>
+        </div>
+        <div class='header-box-col'>
+          <div class='card-title blue'>
+            <h3>
+              Weekly Stream
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-rss'></div>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!</p>
+          </div>
+          <div class='card-action'>
+            <a href='http://www.planetaudio.org.nz/kickarts/player' target='_blank'>Stream here</a>
+          </div>
+        </div>
+        <div class='header-box-col'>
+          <div class='card-title purple'>
+            <h3>
+              Archive
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-archive'></div>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.</p>
+          </div>
+          <div class='card-action'>
+            <a href='#'>Browse archive</a>
+          </div>
+        </div>
       </div>
     </header>
-    <div class='entry'>
-      <div class='description'>
-        <p>
-          KickArts is Auckland's weekly comprehensive art show, live every Sunday night at 8.35pm on 104.6 FM (Auckland only). You can also stream us on planetaudio.org.nz.
-        </p>
-        <h3>
-          Our latest episode...
-        </h3>
-        <p>
-          The marvels of technology! 5 minutes after we are off air the latest episode is available for you to enjoy. A couple of days later it will appear in our archive so that you can listen to it over and over again. Download it as an MP3 and send it to your friends – or your enemies!
-        </p>
-        <p>
-          <button type='button'>
-            Listen here
-          </button>
-        </p>
-        <h3>
-          Missed an episode?
-        </h3>
-        <p>
-          If you have missed an episode don't worry. Down here you can check out our last 6 episodes or if you feel like to listen to some vintage episodes just visit our Archives.
-        </p>
-      </div>
-    </div>
     <div class='entry'>
       <div class='cover158'>
         <h2>
