adds two more cards for team and contact details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       </h1>
       <div class='header-box'>
-        <div class='header-box-col'>
+        <div class='header-box-col-3'>
           <div class='card-title emerald'>
             <h3>
               Live Shows
@@ -43,7 +43,7 @@
             <a href='http://www.planetaudio.org.nz/ab/index.php' target='_blank'>Listen here</a>
           </div>
         </div>
-        <div class='header-box-col'>
+        <div class='header-box-col-3'>
           <div class='card-title blue'>
             <h3>
               Weekly Stream
@@ -59,7 +59,7 @@
             <a href='http://www.planetaudio.org.nz/kickarts/player' target='_blank'>Stream here</a>
           </div>
         </div>
-        <div class='header-box-col'>
+        <div class='header-box-col-3'>
           <div class='card-title purple'>
             <h3>
               Archive
@@ -73,6 +73,44 @@
           </div>
           <div class='card-action'>
             <a href='#'>Browse archive</a>
+          </div>
+        </div>
+      </div>
+      <div class='header-box-2'>
+        <div class='header-box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Our team
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-users'></div>
+            </div>
+          </div>
+          <div class='card-body-box-height'>
+            <p>
+              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+            </p>
+          </div>
+          <div class='card-action'>
+            <a href='#'>More info</a>
+          </div>
+        </div>
+        <div class='header-box-col-2'>
+          <div class='card-title alizarin'>
+            <h3>
+              Contact us
+            </h3>
+            <div class='card-icon'>
+              <div class='fa fa-map-marker'></div>
+            </div>
+          </div>
+          <div class='card-body-box-height'>
+            <p>
+              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+            </p>
+          </div>
+          <div class='card-action'>
+            <a href='#'>More info</a>
           </div>
         </div>
       </div>
