--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               <div class='fa fa-users'></div>
             </div>
           </div>
-          <div class='card-body-box-height'>
+          <div class='card-body box-height'>
             <p>
               Find out who is behind the microphone, their background, story and juicy gossip... you wish.
             </p>
@@ -104,7 +104,7 @@
               <div class='fa fa-map-marker'></div>
             </div>
           </div>
-          <div class='card-body-box-height'>
+          <div class='card-body box-height'>
             <p>
               All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
             </p>
