starts adding nav bar

--- a/index.html
+++ b/index.html
@@ -14,6 +14,34 @@
     <script src='js/min/app-min.js'></script>
   </head>
   <body>
+    <div class='top-bar'>
+      &nbsp;
+    </div>
+    <nav>
+      <h1>
+        <div class='nav-logo'></div>
+        <div class='nav-title'>
+          KickArts.org.nz
+        </div>
+      </h1>
+      <ul>
+        <li>
+          <a href='#'>
+            Latest shows
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            Our Team
+          </a>
+        </li>
+        <li>
+          <a href='#'>
+            Contact us
+          </a>
+        </li>
+      </ul>
+    </nav>
     <header>
       <h1 class='logo'>
         <img alt='' src='img/kickarts-logo-new-icon.png'>
