--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
       &nbsp;
     </div>
     <nav>
-      <h1>
-        <div class='nav-logo'></div>
-        <div class='nav-title'>
-          KickArts.org.nz
-        </div>
-      </h1>
+      <a href='#header'>
+        <h1>
+          <div class='nav-logo'>
+            <img alt='' src='img/kickarts-logo-new-icon.png'>
+          </div>
+          <div class='nav-title'><span style='font-weight: 400'>Kick</span>Arts<span style='font-weight: 400'>.org.nz</span></div>
+        </h1>
+      </a>
       <ul>
         <li>
-          <a href='#'>
+          <a href='#latest-show'>
             Latest shows
           </a>
         </li>
@@ -40,9 +42,14 @@
             Contact us
           </a>
         </li>
+        <li>
+          <a href='#'>
+            Archive
+          </a>
+        </li>
       </ul>
     </nav>
-    <header>
+    <header id='header'>
       <h1 class='logo'>
         <img alt='' src='img/kickarts-logo-new-icon.png'>
         <div class='logo-title'><span class='thin'>KICK</span><span class='bold'>ARTS</span>
@@ -104,45 +111,8 @@
           </div>
         </div>
       </div>
-      <div class='header-box-2'>
-        <div class='header-box-col-2'>
-          <div class='card-title green-sea'>
-            <h3>
-              Our team
-            </h3>
-            <div class='card-icon'>
-              <div class='fa fa-users'></div>
-            </div>
-          </div>
-          <div class='card-body box-height'>
-            <p>
-              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
-            </p>
-          </div>
-          <div class='card-action'>
-            <a href='#'>More info</a>
-          </div>
-        </div>
-        <div class='header-box-col-2'>
-          <div class='card-title alizarin'>
-            <h3>
-              Contact us
-            </h3>
-            <div class='card-icon'>
-              <div class='fa fa-map-marker'></div>
-            </div>
-          </div>
-          <div class='card-body box-height'>
-            <p>
-              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
-            </p>
-          </div>
-          <div class='card-action'>
-            <a href='#'>More info</a>
-          </div>
-        </div>
-      </div>
     </header>
+    <div id='latest-show'></div>
     <div class='entry'>
       <div class='cover158'>
         <h2>
@@ -302,6 +272,44 @@
         </div>
         <div class='player'>
           <audio controls='controls'></audio>
+        </div>
+      </div>
+    </div>
+    <div class='header-box-2'>
+      <div class='header-box-col-2'>
+        <div class='card-title green-sea'>
+          <h3>
+            Our team
+          </h3>
+          <div class='card-icon'>
+            <div class='fa fa-users'></div>
+          </div>
+        </div>
+        <div class='card-body box-height'>
+          <p>
+            Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+          </p>
+        </div>
+        <div class='card-action'>
+          <a href='#'>More info</a>
+        </div>
+      </div>
+      <div class='header-box-col-2'>
+        <div class='card-title alizarin'>
+          <h3>
+            Contact us
+          </h3>
+          <div class='card-icon'>
+            <div class='fa fa-map-marker'></div>
+          </div>
+        </div>
+        <div class='card-body box-height'>
+          <p>
+            All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+          </p>
+        </div>
+        <div class='card-action'>
+          <a href='#'>More info</a>
         </div>
       </div>
     </div>
