--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
       </a>
       <ul>
         <li>
-          <a href='#latest-show'>
+          <a class='menu-link' href='#latest-show'>
             Latest shows
           </a>
         </li>
         <li>
-          <a href='#'>
+          <a class='menu-link' href='#'>
             Our Team
           </a>
         </li>
         <li>
-          <a href='#'>
+          <a class='menu-link' href='#'>
             Contact us
           </a>
         </li>
         <li>
-          <a href='#'>
+          <a class='menu-link' href='#'>
             Archive
           </a>
         </li>
