adds search icon in nav bar

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             Archive
           </a>
         </li>
+        <li>
+          <a class='menu-link' href='#'>
+            <div class='fa fa-search'></div>
+          </a>
+        </li>
       </ul>
     </nav>
     <header id='header'>
