--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </p>
         </div>
       </h1>
-      <div class='header-box'>
-        <div class='header-box-col-3'>
+      <div class='box'>
+        <div class='box-col-3'>
           <div class='card-title emerald'>
             <h3>
               Live Shows
@@ -83,7 +83,7 @@
             <a href='http://www.planetaudio.org.nz/ab/index.php' target='_blank'>Listen here</a>
           </div>
         </div>
-        <div class='header-box-col-3'>
+        <div class='box-col-3'>
           <div class='card-title blue'>
             <h3>
               Weekly Stream
@@ -99,7 +99,7 @@
             <a href='http://www.planetaudio.org.nz/kickarts/player' target='_blank'>Stream here</a>
           </div>
         </div>
-        <div class='header-box-col-3'>
+        <div class='box-col-3'>
           <div class='card-title purple'>
             <h3>
               Archive
@@ -117,6 +117,48 @@
         </div>
       </div>
     </header>
+    <div id='our-team'>
+      <div class='box-2'>
+        <div class='box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Richard Green
+            </h3>
+            <p class='team-description'>Host, Producer &amp; Reviewer</p>
+            <div class='card-img'>
+              <img alt='' src='img/richard.jpg'>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+            </p>
+          </div>
+          <div class='card-action'>
+            <a href='#'>More info</a>
+          </div>
+        </div>
+        <div class='box-col-2'>
+          <div class='card-title green-sea'>
+            <h3>
+              Enny Benzonelli
+            </h3>
+            <p class='team-description'>Co-Host, Co-Producer &amp; Reviewer</p>
+            <div class='card-img'>
+              <img alt='' src='img/enny.jpg'>
+            </div>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+            </p>
+          </div>
+          <div class='card-action'>
+            <a href='#'>More info</a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id='latest-show'></div>
     <div class='entry'>
       <div class='cover158'>
@@ -280,8 +322,8 @@
         </div>
       </div>
     </div>
-    <div class='header-box-2'>
-      <div class='header-box-col-2'>
+    <div class='box-2'>
+      <div class='box-col-2'>
         <div class='card-title green-sea'>
           <h3>
             Our team
@@ -299,7 +341,7 @@
           <a href='#'>More info</a>
         </div>
       </div>
-      <div class='header-box-col-2'>
+      <div class='box-col-2'>
         <div class='card-title alizarin'>
           <h3>
             Contact us
