--- a/index.html
+++ b/index.html
@@ -131,11 +131,36 @@
           </div>
           <div class='card-body box-height'>
             <p>
-              Find out who is behind the microphone, their background, story and juicy gossip... you wish.
+              Richard is an arts practitioner with over 25 years experience in theatre, film, festivals, music and events.
+            </p>
+            <p>
+              An award winning script writer, founder of the longest running T.I.E company in New Zealand and stay at home dad, he runs the sponsoring trust that funds KickArts which specialises in arts access.
+            </p>
+            <p>
+              Passionate about the arts and its contribution to society, he started KickArts as a vehicle to promote not only arts events but also discover the personalities and characters who make up Auckland’s arts community.
+            </p>
+            <p>
+              The father of three is Chair of his local school board and relaxes in the kitchen with a glass of wine while creating exotic food.
             </p>
           </div>
           <div class='card-action'>
-            <a href='#'>More info</a>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-globe'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-linkedin'></div>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
         <div class='box-col-2'>
@@ -150,11 +175,43 @@
           </div>
           <div class='card-body box-height'>
             <p>
-              All the necessary details to get in touch with us: email, social media and instructions how to reach our studio.
+              Enny moved to New Zealand from Switzerland in 2009 after an extensive career in banking to fulfil his passion for film and television. He attended South Seas Film and Television School and after a soul searching tour of Aotearoa, he felt in love with New Zealand and made Auckland his home.
+            </p>
+            <p>
+              When Richard decided to start KickArts, he approached Enny to be the TV Reviewer/Co-Host, since then the two are an inseparable couple… well only on Sundays from 8.35 till 10.05 (thank you Imogen!).
+            </p>
+            <p>
+              Enny freelances in the media industry on numerous interesting projects mostly for <a href="http://www.webkea.co.nz" target='_blank'>WebKea</a>. He is an indipendent editor, web designer, producer, director with a high level of artistic skill and a magnificent eye for detail. Enny has worked on feature and short films, indie, commercial and corporate projects.
             </p>
           </div>
           <div class='card-action'>
-            <a href='#'>More info</a>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-globe'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-linkedin'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-twitter'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-instagram'></div>
+                </a>
+              </li>
+            </ul>
           </div>
         </div>
       </div>
