--- a/index.html
+++ b/index.html
@@ -418,4 +418,5 @@
       </div>
     </div>
   </body>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js'></script>
 </html>
