--- a/index.html
+++ b/index.html
@@ -260,6 +260,6 @@
   <script src='episode.tag' type='riot/tag'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js'></script>
   <script>
-    riot.mount('episode')
+    riot.mount('episode, raw')
   </script>
 </html>
