escape html for description dynamic values

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
       </div>
     </div>
   </body>
+  <script src='raw.tag' type='riot/tag'></script>
   <script src='episode.tag' type='riot/tag'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js'></script>
   <script>
