adds contact boxes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <script src='js/min/modernizr.js'></script>
     <script src='js/min/jquery-1.11.3.min.js'></script>
     <script src='js/min/match-height.js' type='text/javascript'></script>
-    <script src='js/min/skrollr.js'></script>
     <script src='js/min/app-min.js'></script>
   </head>
   <body>
@@ -216,6 +215,89 @@
         </div>
       </div>
     </div>
+    <div id='contact'>
+      <div class='box-2'>
+        <div class='box-col-2'>
+          <div class='card-title alizarin'>
+            <h3>
+              Be Our Guest on Sunday
+            </h3>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              KickArts - Auckland's comprehensive art show is open to all artists in Auckland or anywhere else in New Zealand and in the World.
+            </p>
+            <p>
+              Do you have a new album, exhibition, show, movie or arts event? Then KickArts is your prime place to talk about it. Our relaxed panel format means you get to discuss your project, your background and your views on arts in New Zealand with Richard and the other guests.
+            </p>
+            <p>
+              It is simple to get in touch with KickArts. Just email to <a href='mailto:kickarts1@gmail.com'>kickarts1@gmail.com</a>, tell us briefly about your project and how we can get in touch with you.
+            </p>
+            <p>
+              Once all has been sorted, just book your Sunday evening, because we are live! The show will start at 8.35pm and run till 10.05pm. We encourage our guests to stay the whole show. Just reach the studio about 15 minutes in advance so we can have the change to talk a little bit before it starts.
+            </p>
+          </div>
+          <div class='card-action'>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-envelope-o'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-facebook'></div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class='box-col-2'>
+          <div class='card-title alizarin'>
+            <h3>
+              KickArts' Studio
+            </h3>
+          </div>
+          <div class='card-body box-height'>
+            <p>
+              KickArts goes live every Sunday night at 8.35pm from the PlanetFM's studios. To reach them just take a look at the map and read the simple instructions bellow.
+            </p>
+            <iframe frameborder='0' src='https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3191.6565872874557!2d174.709828!3d-36.874638000000004!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6d0d4721e8ba396b%3A0x68173e75b3d6c62!2sPlanet+FM!5e0!3m2!1sen!2snz!4v1423222400085' style='border:0' width='100%'></iframe>
+            <p>
+              How to reach 79 Carrington Road:
+              <ul>
+                <li>Enter via Unitec-Gate 1 and turn into the narrow lane first on the left.</li>
+                <li>Park only in designated carparks.</li>
+                <li>Exit via the one-way system.</li>
+              </ul>
+            </p>
+            <p>
+              Other ways to reach us without a car:
+              <ul>
+                <li>There is a railway station in Mt. Albert and a 2km walk.</li>
+                <li>There is a range of bus services.</li>
+                <li>There are cycle tracks alongside the north western motorway.</li>
+                <li>You can enter from Gt. North Road, on foot or bicycle via the walking track.</li>
+              </ul>
+            </p>
+          </div>
+          <div class='card-action'>
+            <ul>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-globe'></div>
+                </a>
+              </li>
+              <li>
+                <a href='#'>
+                  <div class='fa fa-location-arrow'></div>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
     <div id='latest-show'></div>
     <episode></episode>
     <div class='box-2'>
@@ -252,7 +334,21 @@
           </p>
         </div>
         <div class='card-action'>
-          <a href='#'>More info</a>
+          <ul>
+            <li>
+              <a href='#'>More info</a>
+            </li>
+            <li>
+              <a href='#'>
+                <div class='fa fa-facebook'></div>
+              </a>
+            </li>
+            <li>
+              <a href='#'>
+                <div class='fa fa-twitter'></div>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </div>
