--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
       </div>
     </div>
     <div id='latest-show'></div>
-    <episode></episode>
+    <recent-shows></recent-shows>
     <div class='box-2'>
       <div class='box-col-2'>
         <div class='card-title green-sea'>
@@ -354,9 +354,10 @@
     </div>
   </body>
   <script src='raw.tag' type='riot/tag'></script>
+  <script src='recent-shows.tag' type='riot/tag'></script>  
   <script src='episode.tag' type='riot/tag'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/riot/2.2.4/riot+compiler.min.js'></script>
   <script>
-    riot.mount('episode, raw')
+    riot.mount('episode, recent-shows, raw')
   </script>
 </html>
